--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- /* stylesheet */ -->
     <link rel="stylesheet" href="style.css" />
-    <!-- /* link script is here */ -->
+    /* link script is
     <script src="https://kit.fontawesome.com/c8a7b55682.js" crossorigin="anonymous"></script>
   </head>
 
