--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <p>
                 this is poulo dybana ,he is a argintine  player.his club is psg.his playing is
                 very amazing.i watch his every match and he is very strong
-                player
+                plaer
               </p>
         </div>
 
